# global-protect-proxy

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .prettierrc.yaml  .yamllint.yaml  AGENTS.md  Dockerfile  Dockerfile_Big  Dockerfile_Slim  Dockerfile_Working  Dockerfile_build  Dockerfile_deb  README.md  agents.md  docker-compose.yml  entrypoint.sh  gp-handler.sh  index.html  pyproject.toml  server.py  start.sh
.github/: dependabot.yml
.github/workflows/: build.yml  pre-commit-sync.yml  release-client.yml
apps/gp-client-proxy/: Cargo.toml
apps/gp-client-proxy/src/: main.rs
apps/vpn-link-handler/: Cargo.toml  build.rs  main.rs
apps/vpn-link-handler/src/: main.rs
